--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>THE SHAH</title>
 <style>
 html { 
-    background: url(samkun.jpg) no-repeat center center fixed; 
+    background: url(samkun2.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
